<resources>
    <string name="app_name">EleoneTech</string>
    <string name="slogan">A Onetech Company</string>
    <string name="societe_copyright">EleoneTech All Rights Reserved</string>
    <string name="titre_login">Connexion</string>
    <string name="email_hint">Adresse e-mail..</string>
    <string name="password_hint">Mot de passe..</string>
    <string name="password_oublie_text">Mot de passe oublié?</string>
    <string name="connexion_button">Se connecter</string>
    <string name="creer_compte_text">Créer un nouveau compte</string>
    <string name="titre_creer_compte">Inscription</string>
    <string name="suivant_button">Suivant</string>
    <string name="titre_connexion_desactiver">Interface à ouvrir</string>
    <string name="connexion_impossible">Connexion impossible</string>
    <string name="ressayer">Appuyez pour réssayer</string>
    <string name="connexion_serveur_impossible">Connexion au serveur impossible</string>
    <string name="nom_hint">Nom..</string>
    <string name="prenom_hint">Prénom..</string>
    <string name="poste_hint">Poste..</string>
    <string name="adresse_hint">Adresse..</string>
    <string name="numero_hint">Numéro mobile..</string>
    <string name="naissance_hint">Date de naissance..</string>
    <string name="titre_password_oublie">Récupération</string>
    <string name="envoyer_code_button">Envoyer un code</string>
    <string name="back_to_login_password_oublie">Pas besoin de cette récupération? \n Cliquer içi pour s"'"authentifier</string>
    <string name="definition_password_oublie">Merci de saisir votre adresse e-mail pour recevoir votre code de sécurité..</string>
    <string name="information_code_securite">Merci de vérifier dans votre e-mail que vous avez reçu un code de sécurité. Celui-ci est composé de 6 chiffres au maximum..</string>
    <string name="code_hint">Code de sécurité..</string>
    <string name="verifier_code_button">Vérifier le code</string>
    <string name="email_incorrecte">Adresse e-mail incorrecte? \n Essayer avec une autre adresse..</string>
    <string name="nombre_essaye">Nombre des essais dépassé</string>
    <string name="info_nombre_essaie">Vous avez dépassé le nombre des essais autorisé. Entrer votre adresse e-mail et réssayer une autre fois..</string>
    <string name="ressayer_ici">Ressayer une autre fois..</string>
    <string name="info_changer_password">Eviter de saisir l"'"ancien mot de passe s"'"il vous plait pour garder votre compte en plein sécurité..</string>
    <string name="repeter_password_hint">Confirmer le mot de passe..</string>
    <string name="changer_password_button">Modifier</string>
    <string name="interface_en_panne">Interface introuvable</string>
    <string name="besion_aide">Besoin d"'"aide?</string>
    <string name="reponses">Les réponses se trouvent içi..</string>
    <string name="titre_profil_hint">EleoneTech Company</string>
    <string name="post_hint">Administrateur</string>
    <string name="adresse_complet_hint">Administrateur@eleonetech.com</string>
    <string name="poste_profil_hint">Poste de travail</string>
    <string name="numero_profil_hint">Numéro mobile</string>
    <string name="adresse_profil_hint">Adresse</string>
    <string name="naissance_profil_hint">Naissance</string>
    <string name="ancien_password_hint">Ancien mot de passe..</string>
    <string name="nouveau_password_hint">Nouveau mot de passe..</string>
    <string name="ouvrir_camera">Ouvrir l"'"appareil photo</string>
    <string name="ouvrir_gallery">Ouvrir la gallerie</string>
    <string name="modifier_profil">Modifier les informations</string>
    <string name="equipement_hint">Rechercher un équipement..</string>
    <string name="code_equipement">Code d"'"équipement</string>
    <string name="description_equipement">Déscription d"'"équipement</string>
    <string name="date_fin_equipement">Date de fin de validité</string>
    <string name="emplacement_equipement">Emplacement d"'"équipement</string>
    <string name="etat_equipement">Etat d"'"équipement</string>
    <string name="numero_serie_equipement">Numéro de série</string>
    <string name="visites_title">Gestion des visites</string>
    <string name="num_serie_equipement">Numéro de série de l"'"équipement</string>
    <string name="choisir_date">Choisissez une date</string>
    <string name="visites_menu">Visites</string>
    <string name="equipement_menu">Equipements</string>
    <string name="certificat_menu">Certificats</string>
    <string name="rapports_menu">Rapports</string>
    <string name="aucun_equipement">Aucun visites d"'"équipement trouvé pour ce mois</string>
    <string name="titre_fiche_visite">Fiche de visite</string>
    <string name="technicien_hint">Technicien métrolocal</string>
    <string name="remarques_hint">Remarques du technicien</string>
    <string name="valider_code_qr">Validation QR Code</string>
    <string name="societe_etalonage_equipement">Société d"'"étalonage</string>
    <string name="date_aujourdhui">Date d"'"aujourd"'"hui</string>
    <string name="titre_code_qr">Information de code</string>
    <string name="envoyer_rapport">Enovoyer le rapport</string>
    <string name="titre_qr_code_incorrecte">Code QR erroné</string>
    <string name="text_code_errone">Le code QR que vous avez scanné est incorrecte. Merci de ressayer une autre fois..</string>
    <string name="retour_visites">Retour aux visites</string>
    <string name="tittre_button_profil">Profil</string>
    <string name="tittre_button_profil2">Déconnexion</string>
    <string name="poste_profil_home">(Poste de travail)</string>
    <string name="modifier_password">Password</string>
    <string name="titre_information_profil">Informations de profil</string>
    <string name="prenom_profil">Prénom</string>
    <string name="nom_profil">Nom</string>
    <string name="email_profil">Adresse éléctronique</string>
    <string name="poste_profil">Poste</string>
    <string name="adresse_profil">Adresse</string>
    <string name="naissance_profil">Date de naissance</string>
    <string name="consulter_infos">Compte</string>
    <string name="tittre_modifier_password">Gestion de compte</string>
    <string name="tittre_modifier_profil">Gestion de profil</string>
    <string name="tittre_visites">Gestion des visites</string>
    <string name="mini_tittre_visites">Visites par mois</string>
    <string name="search">Rechercher</string>
    <string name="category_hint">Catégorie de l"'"équipement</string>
    <string name="exigence_hint">Exigence tunac</string>
    <string name="lieu_etalonage">Lieu d"'"étalonage</string>
    <string name="mini_tittre_qr_code_incorrecte">Notification</string>
    <string name="tittre_chercher_rapports">Gestion des rapports</string>
    <string name="mini_tittre_chercher_rapports">Par code d"'"équipement</string>
    <string name="search_rapport_hint">Chercher un rapport..</string>
    <string name="tittre_information_rapport">Informations de rapport</string>
    <string name="tittre_liste_rapports">Gestion des équipements</string>
    <string name="tittre_information_equipement">Informations de l"'"équipement</string>
    <string name="tittre_certificats">Gestion des certificats</string>
    <string name="search_certif">Chercher une certificat..</string>
    <string name="date_certificat_hint">Date de certificat</string>
    <string name="certificat_hint">Certificat</string>
</resources>