<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    tools:context=".QrCodeIncorrecteActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_qr_code_incorrecte"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:logo="@drawable/logo_societe"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scroll_view_qr_code_incorrecte"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:fillViewport="true"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_qr_code_incorrecte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="0dp">

            <LinearLayout
                android:id="@+id/wallpaper_qr_code_incorrecte"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_margin="25dp"
                android:background="@drawable/scan_qr_code"
                android:backgroundTint="@color/transparent"
                android:backgroundTintMode="src_over"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </LinearLayout>

            <TextView
                android:id="@+id/tittre_qr_code_incorrecte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:letterSpacing="0.06"
                android:text="@string/titre_qr_code_incorrecte"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wallpaper_qr_code_incorrecte">
            </TextView>

            <TextView
                android:id="@+id/mini_tittre_qr_code_incorrecre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textAllCaps="true"
                android:textStyle="normal"
                android:text="@string/mini_tittre_qr_code_incorrecte"
                android:textColor="@color/black"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/tittre_qr_code_incorrecte"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </TextView>

            <TextView
                android:id="@+id/text_code_errone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_code_errone"
                android:textSize="16sp"
                android:padding="40dp"
                android:layout_margin="25dp"
                android:textColor="@color/rouge"
                android:textStyle="bold"
                android:letterSpacing="0.03"
                android:layout_marginTop="50dp"
                android:background="@drawable/linear_layout_purple_light"
                app:layout_constraintTop_toBottomOf="@id/mini_tittre_qr_code_incorrecre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
            </TextView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/retour_visites_qr_code_incorrecte"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="30dp"
                android:background="@drawable/button_bleu"
                android:clickable="true"
                android:focusable="true"
                android:textAllCaps="true"
                android:text="@string/retour_visites"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="15dp"
                android:layout_gravity="center"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">
            </androidx.appcompat.widget.AppCompatButton>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>