<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_application"
    android:backgroundTint="@color/transparent"
    android:backgroundTintMode="src_over"
    android:focusableInTouchMode="true"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fillViewport="true"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/logo_societe_login"
                android:layout_width="wrap_content"
                android:layout_height="160dp"
                android:src="@drawable/logo_societe"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </ImageView>

            <TextView
                android:id="@+id/titre_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAllCaps="true"
                android:letterSpacing="0.07"
                android:text="@string/titre_login"
                android:textColor="@color/bleu"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo_societe_login">
            </TextView>

            <View
                android:id="@+id/ligne_login"
                android:layout_width="152dp"
                android:layout_height="2dp"
                android:background="@color/bleu"
                android:backgroundTint="@color/bleu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titre_login">
            </View>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:textColorHint="@color/bleu"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:errorEnabled="false"
                app:errorIconDrawable="@null"
                app:startIconDrawable="@drawable/email"
                app:startIconTint="@color/bleu"
                app:hintTextColor="@color/bleu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ligne_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_login"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/edit_text_cercle"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/bleu"
                    android:textSize="10dp"
                    android:textStyle="bold">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/erreur_email_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/rouge"
                android:textSize="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_email_login">
            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:textColorHint="@color/bleu"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:errorEnabled="false"
                app:errorIconDrawable="@null"
                app:hintTextColor="@color/bleu"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/bleu"
                app:startIconDrawable="@drawable/password"
                app:startIconTint="@color/bleu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/erreur_email_login">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/edit_text_cercle"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/bleu"
                    android:textSize="10dp"
                    android:textStyle="bold">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/erreur_password_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="@color/rouge"
                android:textSize="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_password_login">
            </TextView>

            <TextView
                android:id="@+id/password_oublie_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="30dp"
                android:text="@string/password_oublie_text"
                android:textColor="@color/bleu"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/erreur_password_login">
            </TextView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/connexion_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="30dp"
                android:background="@drawable/button_cercle"
                android:clickable="true"
                android:focusable="true"
                android:textAllCaps="true"
                android:text="@string/connexion_button"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_oublie_login">
            </androidx.appcompat.widget.AppCompatButton>

            <TextView
                android:id="@+id/creer_compte_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:drawableRight="@drawable/next"
                android:gravity="center"
                android:text="@string/creer_compte_text"
                android:textColor="@color/bleu"
                android:textSize="10dp"
                android:drawablePadding="5dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/connexion_login">
            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>